# ai-engineering-1

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture-c4-ddd.md
src/kb_chat/: __init__.py
src/kb_chat/api/routers/: chat.py
src/kb_chat/core/chat/impl/: service.py
